# windy-station

./: Cargo.toml  README.md
src/: lib.rs
test/request/: complete_report.json  register_stations.json  simple_report.json
